INCLUDE( ${QT_USE_FILE} )

INCLUDE_DIRECTORIES(
  ${CMAKE_BINARY_DIR}
  .
)

SET( MINIMAL_EXIF_EDITOR_SRCS
    egtminimalexifeditor.cpp
   )

SET( MINIMAL_EXIF_EDITOR_MOC_HDRS
    egtminimalexifeditor.h
   )

QT4_AUTOMOC( ${MINIMAL_EXIF_EDITOR_SRCS} )
QT4_WRAP_CPP( MINIMAL_EXIF_EDITOR_MOC_SRCS ${MINIMAL_EXIF_EDITOR_MOC_HDRS} )

ADD_DEFINITIONS( -DQT_PLUGIN )

ADD_library( minimalexifeditor MODULE ${MINIMAL_EXIF_EDITOR_SRCS} ${MINIMAL_EXIF_EDITOR_MOC_SRCS} )
TARGET_LINK_LIBRARIES( minimalexifeditor ${QT_LIBRARIES} )

INSTALL( TARGETS minimalexifeditor DESTINATION ${CMAKE_INSTALL_PREFIX}/plugin )