IF (WIN32)
  IF (MSVC)
    ADD_DEFINITIONS("-DMS_DLL_SPEC=__declspec(dllimport)")
  ELSE (MSVC)
    ADD_DEFINITIONS("-UMS_DLL_SPEC \"-DMS_DLL_SPEC=__declspec(dllimport)\"")
  ENDIF (MSVC)
ENDIF (WIN32)


INCLUDE( ${QT_USE_FILE} )

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_BINARY_DIR}
)

SET( PYTHON_CONSOLE_SRCS
    egtpythonconsole.cpp
   )

SET( PYTHON_CONSOLE_MOC_HDRS
    egtpythonconsole.h
   )

QT4_AUTOMOC( ${PYTHON_CONSOLE_SRCS} )

QT4_WRAP_CPP( PYTHON_CONSOLE_MOC_SRCS ${PYTHON_CONSOLE_MOC_HDRS} )

ADD_DEFINITIONS( -DQT_PLUGIN )

ADD_LIBRARY( pythonconsole MODULE
             ${PYTHON_CONSOLE_SRCS}
             ${PYTHON_CONSOLE_MOC_SRCS}
           )

TARGET_LINK_LIBRARIES( pythonconsole
  ${QT_LIBRARIES}
  ${PYTHON_LIBRARY}
  easygt
  )

INSTALL( TARGETS pythonconsole DESTINATION ${EASYGT_PLUGIN_SUBDIR} )
