INCLUDE(${QT_USE_FILE})

INCLUDE_DIRECTORIES(
  ${TEST_SOURCE_DIR}
  ${CMAKE_BINARY_DIR}
  .
)

SET(TEST_SRCS
    egttestplugin.cpp
   )

SET(TEST_MOC_HDRS
    egttestplugin.h
   )

QT4_AUTOMOC(${TEST_SRCS})
QT4_WRAP_CPP(TEST_MOC_SRCS ${TEST_MOC_HDRS})

ADD_DEFINITIONS(-DQT_PLUGIN)

ADD_library(testplugin MODULE ${TEST_SRCS} ${TEST_MOC_SRCS})
TARGET_LINK_LIBRARIES(testplugin ${QT_LIBRARIES})

INSTALL(TARGETS testplugin DESTINATION ${CMAKE_INSTALL_PREFIX}/plugin)