IF (WIN32)
  IF (MSVC)
    ADD_DEFINITIONS("-DMS_DLL_SPEC=__declspec(dllimport)")
  ELSE (MSVC)
    ADD_DEFINITIONS("-UMS_DLL_SPEC \"-DMS_DLL_SPEC=__declspec(dllimport)\"")
  ENDIF (MSVC)
ENDIF (WIN32)

INCLUDE( ${QT_USE_FILE} )

INCLUDE_DIRECTORIES(
  ${CMAKE_BINARY_DIR}
  .
)

SET( TEST_SRCS
    egttestplugin.cpp
   )

SET( TEST_MOC_HDRS
    egttestplugin.h
   )

QT4_AUTOMOC( ${TEST_SRCS} )
QT4_WRAP_CPP( TEST_MOC_SRCS ${TEST_MOC_HDRS} )

ADD_DEFINITIONS( -DQT_PLUGIN )

ADD_library( testplugin MODULE ${TEST_SRCS} ${TEST_MOC_SRCS} )
TARGET_LINK_LIBRARIES( testplugin ${QT_LIBRARIES} easygt )

INSTALL( TARGETS testplugin DESTINATION ${EASYGT_PLUGIN_SUBDIR} )